--- a/index.html
+++ b/index.html
@@ -6,9 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component Library</title>
+
+    <!-- CSS way 1: Style Tag -->
+    <!-- <style>
+        body{
+            color: red;
+        }
+    </style> -->
+
+    <!-- CSS way 3: Style Tag -->
+<link href="styles.css" rel="stylesheet"/>
 </head>
 
 <body>
+    <!-- CSS way 2: style="color: red;" -->
     <h1>Harish's component library</h1>
     <p>This is component library created for project while working on neog.camp levelZero.</p>
 
@@ -26,47 +37,56 @@
     <h2>@container</h2>
 
     <h3>fluid container</h3>
-    <div>This is fluid container and it will go till the end of the page</div>
+    <div class="container ">This is fluid container and it will go till the end of the page</div>
 
     <h3>center container</h3>
-    <div>This is centered container and it will go till specified width</div>
+    <div class="container container-center">This is centered container and it will go till specified width</div>
 
     <hr />
 
     <h2>@links</h2>
 
-    <a href="/">Primary Link</a>
-    <a href="/">Secondary Link</a>
+    <a class="link link-primary" href="/">Primary Link</a>
+    <a class="link link-secondary" href="/">Secondary Link</a>
 
     <hr />
 
     <h2>@lists</h2>
 
-    <ul>
-        <li>Inline item 1</li>
-        <li>Inline item 2</li>
-        <li>Inline item 3</li>
+    <h3>unordered list</h3>
+    <p>This list will not have the bullet</p>
+
+    <h3>unordered inline list</h3>
+
+    <ul class="list-non-bullet">
+        <li class="list-item-inline">Item 1</li>
+        <li class="list-item-inline">Item 2</li>
+        <li class="list-item-inline">Item 3</li>
     </ul>
 
-    <ol>
-        <li></li>
+    <h3>reversed ordered list</h3>
+
+    <ol reversed>
+        <li>milk</li>
+        <li>eggs</li>
+        <li>break</li>
     </ol>
 
     <hr />
 
     <h2>@nav</h2>
 
-    <nav>
-        <div>iAmBrand</div>
-        <ul>
-            <li>
-                <a href="/">home</a>
+    <nav class="navigation container">
+        <div class="nav-brand">iAmBrand</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline">
+                <a class="link link-active" href="/">home</a>
             </li>
-            <li>
-                <a href="/">products</a>
+            <li class="list-item-inline">
+                <a class="link" href="/">products</a>
             </li>
-            <li>
-                <a href="/">about</a>
+            <li class="list-item-inline">
+                <a class="link" href="/">about</a>
             </li>
         </ul>
     </nav>
