--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style> -->
 
     <!-- CSS way 3: Style Tag -->
-<link href="styles.css" rel="stylesheet"/>
+    <link href="styles.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -95,23 +95,27 @@
 
     <h2>@header</h2>
 
-    <header>
-        <img src="images/hero.svg">
-        <h1>heading inside hero</h1>
+    <header class="hero">
+        <img class="hero-img" src="images/hero.svg">
+        <h1 class="hero-heading">harish gupta the <span class="heading-inverted"> web developer</span></h1>
     </header>
 
     <hr />
 
     <h2>@section</h2>
 
-    <section>
-        <h3>white section</h3>
-        <p>This will have white background</p>
+    <section class="section">
+        <div class="container container-center">
+            <h1>white section</h1>
+            <p>We are an open community of developers building resources for a better Web, regardless of brand, browser, or platform. Anyone can contribute, and each person who does contribute makes us stronger. Together we can continue to drive innovation on the Web to serve the greater good. It starts here, with you.</p>
+        </div>
     </section>
 
-    <section>
-        <h3>off white section</h3>
-        <p>This will have grey background</p>
+    <section class="section oy">
+        <div class="container container-center">
+            <h1>off white section</h1>
+            <p>We are an open community of developers building resources for a better Web, regardless of brand, browser, or platform. Anyone can contribute, and each person who does contribute makes us stronger. Together we can continue to drive innovation on the Web to serve the greater good. It starts here, with you.</p>
+        </div>
     </section>
 
     <hr />
