--- a/index.html
+++ b/index.html
@@ -1,135 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Component Library</title>
-
-    <!-- CSS way 1: Style Tag -->
-    <!-- <style>
-        body{
-            color: red;
-        }
-    </style> -->
-
-    <!-- CSS way 3: Style Tag -->
-    <link href="styles.css" rel="stylesheet" />
+    <title>home | harish gupta</title>
+    <link href="styles.css" rel="stylesheet"/>
 </head>
-
 <body>
-    <!-- CSS way 2: style="color: red;" -->
-    <h1>Harish's component library</h1>
-    <p>This is component library created for project while working on neog.camp levelZero.</p>
-
-    <hr />
-
-    <h2>@typography</h2>
-
-    <h1>This is biggest heading</h1>
-    <h2>This is second heading</h2>
-    <p>This is normal text.</p>
-    <small>This is small text</small>
-
-    <hr />
-
-    <h2>@container</h2>
-
-    <h3>fluid container</h3>
-    <div class="container ">This is fluid container and it will go till the end of the page</div>
-
-    <h3>center container</h3>
-    <div class="container container-center">This is centered container and it will go till specified width</div>
-
-    <hr />
-
-    <h2>@links</h2>
-
-    <a class="link link-primary" href="/">Primary Link</a>
-    <a class="link link-secondary" href="/">Secondary Link</a>
-
-    <hr />
-
-    <h2>@lists</h2>
-
-    <h3>unordered list</h3>
-    <p>This list will not have the bullet</p>
-
-    <h3>unordered inline list</h3>
-
-    <ul class="list-non-bullet">
-        <li class="list-item-inline">Item 1</li>
-        <li class="list-item-inline">Item 2</li>
-        <li class="list-item-inline">Item 3</li>
-    </ul>
-
-    <h3>reversed ordered list</h3>
-
-    <ol reversed>
-        <li>milk</li>
-        <li>eggs</li>
-        <li>break</li>
-    </ol>
-
-    <hr />
-
-    <h2>@nav</h2>
-
     <nav class="navigation container">
-        <div class="nav-brand">iAmBrand</div>
+        <div class="nav-brand">harish gupta</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link link-active" href="/">home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">products</a>
+                <a class="link" href="/projects.html">projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">about</a>
+                <a class="link" href="/blogs.html">blogs</a>
             </li>
         </ul>
-    </nav>
-
-    <hr />
-
-    <h2>@header</h2>
+    </nav> 
 
     <header class="hero">
-        <img class="hero-img" src="images/hero.svg">
+        <img class="hero-img" src="/images/hero.svg">
         <h1 class="hero-heading">harish gupta the <span class="heading-inverted"> web developer</span></h1>
     </header>
 
-    <hr />
-
-    <h2>@section</h2>
-
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>technologies</h1>
+            <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and Web Hosting.</p>
+        </div>
+    </section>
+    
     <section class="section">
         <div class="container container-center">
-            <h1>white section</h1>
-            <p>We are an open community of developers building resources for a better Web, regardless of brand, browser, or platform. Anyone can contribute, and each person who does contribute makes us stronger. Together we can continue to drive innovation on the Web to serve the greater good. It starts here, with you.</p>
+            <h1>projects</h1>
+            <p>I like to showcase my work and thus, you can see my projects hosted online.</p>
+            <a class="link link-primary" href="/">See Projects</a>
         </div>
     </section>
 
-    <section class="section oy">
+    <section class="section ow">
         <div class="container container-center">
-            <h1>off white section</h1>
-            <p>We are an open community of developers building resources for a better Web, regardless of brand, browser, or platform. Anyone can contribute, and each person who does contribute makes us stronger. Together we can continue to drive innovation on the Web to serve the greater good. It starts here, with you.</p>
+            <h1>blogs</h1>
+            <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.</p>
+            <a class="link link-secondary" href="/">Read Blogs</a>
         </div>
     </section>
 
-    <hr />
-
-    <h2>@footer</h2>
-
-    <footer>
-        <div>some small heading inside footer</div>
-        <ul>
-            <li>socialOne</li>
-            <li>socialTwo</li>
-            <li>socialThree</li>
+    <footer class="footer">
+        <div class="footer-header">social media presence</div>
+        <ul class="list-non-bullet">
+          <li class="list-item-inline">
+            <a class="link" href="https://github.com/HarishFullStack"> github </a>
+          </li>
+          <li class="list-item-inline">
+            <a class="link" href="https://twitter.com/i_harishgupta"> twitter </a>
+          </li>
+          <li class="list-item-inline">
+            <a class="link" href="https://www.linkedin.com/in/connectharishgupta">
+              linkedin
+            </a>
+          </li>
         </ul>
-    </footer>
+      </footer>
 </body>
-
 </html>
