--- a/blogs.html
+++ b/blogs.html
@@ -22,5 +22,53 @@
             </li>
         </ul>
     </nav> 
+
+    <header class="hero">
+        <h1 class="hero-heading">read my <span class="heading-inverted"> blogs</span></h1>
+    </header>
+
+    <ul class="list-non-bullet">
+        <li>
+            <section class="section text-center">
+            <div class="container container-center margin-top margin-bottom">
+                <h1>dummy blog one</h1>
+                <small>August, 2020</small>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+
+                <a class="link link-primary" href="/blog-one.html">Read More</a>
+            </div>
+        </section>
+        </li>
+
+        <li>
+            <section class="section ow  text-center">
+            <div class="container container-center margin-top margin-bottom">
+
+            <h1>dummy blog two</h1>
+            <small>August, 2020</small>
+            <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. </p>
+
+            <a class="link link-primary" href="/blog-two.html">Read More</a>
+        </div>
+    </section>
+        </li>
+    </ul>
+
+    <footer class="footer">
+        <div class="footer-header">social media presence</div>
+        <ul class="list-non-bullet">
+          <li class="list-item-inline">
+            <a class="link" href="https://github.com/HarishFullStack"> github </a>
+          </li>
+          <li class="list-item-inline">
+            <a class="link" href="https://twitter.com/i_harishgupta"> twitter </a>
+          </li>
+          <li class="list-item-inline">
+            <a class="link" href="https://www.linkedin.com/in/connectharishgupta">
+              linkedin
+            </a>
+          </li>
+        </ul>
+      </footer>
 </body>
 </html>
