--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>projects | harish gupta</title>
-    <link href="styles.css" rel="stylesheet"/>
+    <link href="styles.css" rel="stylesheet" />
 </head>
+
 <body>
     <nav class="navigation container">
         <div class="nav-brand">harish gupta</div>
@@ -21,6 +23,60 @@
                 <a class="link" href="/blogs.html">blogs</a>
             </li>
         </ul>
-    </nav> 
+    </nav>
+
+    <header class="hero">
+        <h1 class="hero-heading">see my <span class="heading-inverted"> code</span></h1>
+    </header>
+
+    <ul class="list-non-bullet">
+        <li>
+            <section class="section">
+            <div class="container container-center margin-top margin-bottom">
+                <h1>KAUN BANEGA SCOREPATI</h1>
+                <small>August, 2020</small>
+                <p>A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and find out who
+                    really
+                    knows you</p>
+
+                <a class="link link-primary" href="https://replit.com/@HarishGupta2/assign-mark-one">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/HarishFullStack/assign-mark-one">View Source</a>
+            </div>
+        </section>
+        </li>
+
+        <li>
+            <section class="section ow">
+            <div class="container container-center margin-top margin-bottom">
+
+            <h1>how well do you know me?</h1>
+            <small>August, 2020</small>
+            <p>A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and find out who really
+                knows you</p>
+
+            <a class="link link-primary" href="https://replit.com/@HarishGupta2/assign-mark-one">Live Project</a>
+            <a class="link link-secondary" href="https://github.com/HarishFullStack/assign-mark-one">View Source</a>
+        </div>
+    </section>
+        </li>
+    </ul>
+
+    <footer class="footer">
+        <div class="footer-header">social media presence</div>
+        <ul class="list-non-bullet">
+          <li class="list-item-inline">
+            <a class="link" href="https://github.com/HarishFullStack"> github </a>
+          </li>
+          <li class="list-item-inline">
+            <a class="link" href="https://twitter.com/i_harishgupta"> twitter </a>
+          </li>
+          <li class="list-item-inline">
+            <a class="link" href="https://www.linkedin.com/in/connectharishgupta">
+              linkedin
+            </a>
+          </li>
+        </ul>
+      </footer>
 </body>
+
 </html>
