--- a/blog-one.html
+++ b/blog-one.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>projects | harish gupta</title>
+    <title>blog one | harish gupta</title>
     <link href="styles.css" rel="stylesheet" />
 </head>
 
