--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navigation container">
-        <div class="nav-brand">harish gupta</div>
+        <div class="nav-brand"><a class="link" href="/">harish gupta</a></div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link link-active" href="/">home</a>
