--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navigation container">
-        <div class="nav-brand">harish gupta</div>
+        <div class="nav-brand"><a class="link" href="/">harish gupta</a></div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link" href="/">home</a>
