--- a/blogs.html
+++ b/blogs.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>blogs | harish gupta</title>
-    <link href="styles.css" rel="stylesheet"/>
+    <link href="styles.css" rel="stylesheet" />
 </head>
+
 <body>
     <nav class="navigation container">
         <div class="nav-brand"><a class="link" href="/">harish gupta</a></div>
@@ -21,54 +23,59 @@
                 <a class="link link-active" href="/blogs.html">blogs</a>
             </li>
         </ul>
-    </nav> 
+    </nav>
 
     <header class="hero">
         <h1 class="hero-heading">read my <span class="heading-inverted"> blogs</span></h1>
     </header>
 
-    <ul class="list-non-bullet">
+    <ul class="list-non-bullet container container-center margin-bottom">
         <li>
-            <section class="section text-center">
-            <div class="container container-center margin-top margin-bottom">
-                <h1>dummy blog one</h1>
-                <small>August, 2020</small>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+            <section class="section ow text-center">
+                <div class="container container-center margin-top margin-bottom">
+                    <h1>dummy blog one</h1>
+                    <small>August, 2020</small>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
+                        Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+                        mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
 
-                <a class="link link-primary" href="/blog-one.html">Read More</a>
-            </div>
-        </section>
+                    <a class="link link-primary" href="/blog-one.html">Read More</a>
+                </div>
+            </section>
         </li>
 
-        <li>
-            <section class="section ow  text-center">
-            <div class="container container-center margin-top margin-bottom">
+        <li class="text-center margin-bottom">
+            <section class="section ow text-center">
+                <div class="container container-center margin-top margin-bottom">
 
-            <h1>dummy blog two</h1>
-            <small>August, 2020</small>
-            <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. </p>
+                    <h1>dummy blog two</h1>
+                    <small>August, 2020</small>
+                    <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu,
+                        consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a,
+                        tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. </p>
 
-            <a class="link link-primary" href="/blog-two.html">Read More</a>
-        </div>
-    </section>
+                    <a class="link link-primary" href="/blog-two.html">Read More</a>
+                </div>
+            </section>
         </li>
     </ul>
 
     <footer class="footer">
         <div class="footer-header">social media presence</div>
         <ul class="list-non-bullet">
-          <li class="list-item-inline">
-            <a class="link" href="https://github.com/HarishFullStack"> github </a>
-          </li>
-          <li class="list-item-inline">
-            <a class="link" href="https://twitter.com/i_harishgupta"> twitter </a>
-          </li>
-          <li class="list-item-inline">
-            <a class="link" href="https://www.linkedin.com/in/connectharishgupta">
-              linkedin
-            </a>
-          </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://github.com/HarishFullStack"> github </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://twitter.com/i_harishgupta"> twitter </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://www.linkedin.com/in/connectharishgupta">
+                    linkedin
+                </a>
+            </li>
         </ul>
-      </footer>
+    </footer>
 </body>
+
 </html>
