--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home | harish gupta</title>
-    <link href="styles.css" rel="stylesheet"/>
+    <link href="styles.css" rel="stylesheet" />
 </head>
+
 <body>
     <nav class="navigation container">
         <div class="nav-brand"><a class="link" href="/">harish gupta</a></div>
@@ -21,51 +23,59 @@
                 <a class="link" href="/blogs.html">blogs</a>
             </li>
         </ul>
-    </nav> 
+    </nav>
 
     <header class="hero">
         <img class="hero-img" src="/images/hero.svg">
         <h1 class="hero-heading">harish gupta the <span class="heading-inverted"> web developer</span></h1>
     </header>
 
-    <section class="section ow">
+    <ul class="list-non-bullet container container-center margin-bottom">
+        <li class="text-center">
+    <section class="section ow text-center">
         <div class="container container-center">
             <h1>technologies</h1>
             <p>I'm familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and Web Hosting.</p>
         </div>
     </section>
-    
-    <section class="section">
+    </li>   
+
+    <li>
+    <section class="section text-center">
         <div class="container container-center">
             <h1>projects</h1>
             <p>I like to showcase my work and thus, you can see my projects hosted online.</p>
-            <a class="link link-primary" href="/">See Projects</a>
+            <a class="link link-primary" href="/projects.html">See Projects</a>
         </div>
     </section>
-
-    <section class="section ow">
+</li>
+<li>
+    <section class="section ow text-center margin-bottom">
         <div class="container container-center">
             <h1>blogs</h1>
-            <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.</p>
-            <a class="link link-secondary" href="/">Read Blogs</a>
+            <p>I am also working on some technical and non techincal blogs. I like to document my journey of
+                learning.</p>
+            <a class="link link-secondary" href="/blogs.html">Read Blogs</a>
         </div>
     </section>
-
+</li>
+</ul>
     <footer class="footer">
         <div class="footer-header">social media presence</div>
         <ul class="list-non-bullet">
-          <li class="list-item-inline">
-            <a class="link" href="https://github.com/HarishFullStack"> github </a>
-          </li>
-          <li class="list-item-inline">
-            <a class="link" href="https://twitter.com/i_harishgupta"> twitter </a>
-          </li>
-          <li class="list-item-inline">
-            <a class="link" href="https://www.linkedin.com/in/connectharishgupta">
-              linkedin
-            </a>
-          </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://github.com/HarishFullStack"> github </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://twitter.com/i_harishgupta"> twitter </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://www.linkedin.com/in/connectharishgupta">
+                    linkedin
+                </a>
+            </li>
         </ul>
-      </footer>
+    </footer>
 </body>
+
 </html>
