--- a/projects.html
+++ b/projects.html
@@ -29,54 +29,74 @@
         <h1 class="hero-heading">see my <span class="heading-inverted"> code</span></h1>
     </header>
 
-    <ul class="list-non-bullet">
-        <li>
-            <section class="section">
-            <div class="container container-center margin-top margin-bottom">
-                <h1>KAUN BANEGA SCOREPATI</h1>
-                <small>August, 2020</small>
-                <p>A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and find out who
-                    really
-                    knows you</p>
+    <ul class="list-non-bullet container container-center margin-bottom">
+        <li class="text-center">
+            <article class="section ow text-center">
+                <div class="container container-center margin-top">
+                    <h1>GOT - Dothraki Traslation</h1>
+                    <small>August, 2020</small>
+                    <p>A translation app built with <strong>Vanilla JS</strong>. You can translate from English to Dothraki language.</p>
 
-                <a class="link link-primary" href="https://replit.com/@HarishGupta2/assign-mark-one">Live Project</a>
-                <a class="link link-secondary" href="https://github.com/HarishFullStack/assign-mark-one">View Source</a>
-            </div>
-        </section>
+                    <a class="link link-primary" href="https://got-dothrakitranslation.netlify.app/">Live
+                        Project</a>
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-seven">View
+                        Source</a>
+                </div>
+            </article>
         </li>
 
-        <li>
-            <section class="section ow">
-            <div class="container container-center margin-top margin-bottom">
+        <li class="text-center">
+            <article class="section ow text-center">
+                <div class="container container-center margin-top">
+                    <h1>KAUN BANEGA SCOREPATI</h1>
+                    <small>August, 2020</small>
+                    <p>A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and find out who
+                        really
+                        knows you</p>
 
-            <h1>how well do you know me?</h1>
-            <small>August, 2020</small>
-            <p>A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and find out who really
-                knows you</p>
+                    <a class="link link-primary" href="https://replit.com/@HarishGupta2/assign-mark-two">Live
+                        Project</a>
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/assign-mark-two">View
+                        Source</a>
+                </div>
+            </article>
+        </li>
 
-            <a class="link link-primary" href="https://replit.com/@HarishGupta2/assign-mark-one">Live Project</a>
-            <a class="link link-secondary" href="https://github.com/HarishFullStack/assign-mark-one">View Source</a>
-        </div>
-    </section>
+        <li class="text-center">
+            <article class="section ow text-center">
+                <div class="container container-center margin-top">
+
+                    <h1>how well do you know me?</h1>
+                    <small>August, 2020</small>
+                    <p>A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and find out who
+                        really
+                        knows you</p>
+
+                    <a class="link link-primary" href="https://replit.com/@HarishGupta2/assign-mark-one">Live
+                        Project</a>
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/assign-mark-one">View
+                        Source</a>
+                </div>
+            </article>
         </li>
     </ul>
 
     <footer class="footer">
         <div class="footer-header">social media presence</div>
         <ul class="list-non-bullet">
-          <li class="list-item-inline">
-            <a class="link" href="https://github.com/HarishFullStack"> github </a>
-          </li>
-          <li class="list-item-inline">
-            <a class="link" href="https://twitter.com/i_harishgupta"> twitter </a>
-          </li>
-          <li class="list-item-inline">
-            <a class="link" href="https://www.linkedin.com/in/connectharishgupta">
-              linkedin
-            </a>
-          </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://github.com/HarishFullStack"> github </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://twitter.com/i_harishgupta"> twitter </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://www.linkedin.com/in/connectharishgupta">
+                    linkedin
+                </a>
+            </li>
         </ul>
-      </footer>
+    </footer>
 </body>
 
 </html>
