added more projects

--- a/projects.html
+++ b/projects.html
@@ -33,8 +33,113 @@
         <li class="text-center">
             <article class="section ow text-center">
                 <div class="container container-center margin-top">
+                    <h1>Stocks Profit and Loss Calculator</h1>
+                    <small>August, 2022</small>
+                    <p>A profit and loss calculator app built with <strong>Vanilla JS</strong>. Know in an attractive way if you are on profit or loss on particular stock investment.</p>
+
+                    <a class="link link-primary" href="https://stocks-profit-loss-calci.netlify.app/">Live
+                        Project</a>
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-fourteen">View
+                        Source</a>
+                </div>
+            </article>
+        </li>
+
+        <li class="text-center">
+            <article class="section ow text-center">
+                <div class="container container-center margin-top">
+                    <h1>Palindrome Birthday App</h1>
+                    <small>August, 2022</small>
+                    <p>A palindrome birthday app built with <strong>Vanilla JS</strong>. Know if you were born on palindrome day and if not then by how many days you missed.</p>
+
+                    <a class="link link-primary" href="https://palin-drome-birth-day.netlify.app/">Live
+                        Project</a>
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-thirteen">View
+                        Source</a>
+                </div>
+            </article>
+        </li>
+
+        <li class="text-center">
+            <article class="section ow text-center">
+                <div class="container container-center margin-top">
+                    <h1>Do You Know Your Triangles</h1>
+                    <small>August, 2022</small>
+                    <p>A triangle quiz and education app built with <strong>Vanilla JS</strong>. You can know play quiz to know how better you know triangles.</p>
+
+                    <a class="link link-primary" href="https://fun-with-tri-ang-les.netlify.app/">Live
+                        Project</a>
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-twelve">View
+                        Source</a>
+                </div>
+            </article>
+        </li>
+
+        <li class="text-center">
+            <article class="section ow text-center">
+                <div class="container container-center margin-top">
+                    <h1>Is Your Birthday Lucky</h1>
+                    <small>August, 2022</small>
+                    <p>A know if your birthday is lucky app built with <strong>Vanilla JS</strong>. You can know if your birthday is lucky.</p>
+
+                    <a class="link link-primary" href="https://know-is-your-birthday-lucky.netlify.app/">Live
+                        Project</a>
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-eleven">View
+                        Source</a>
+                </div>
+            </article>
+        </li>
+
+        <li class="text-center">
+            <article class="section ow text-center">
+                <div class="container container-center margin-top">
+                    <h1>Cash Register Manager</h1>
+                    <small>August, 2022</small>
+                    <p>A cash register manager app built with <strong>Vanilla JS</strong>. You can know the number of particular notes to be returned based bill amount and cash given.</p>
+
+                    <a class="link link-primary" href="https://cash-registering-management.netlify.app/">Live
+                        Project</a>
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-ten">View
+                        Source</a>
+                </div>
+            </article>
+        </li>
+
+        <li class="text-center">
+            <article class="section ow text-center">
+                <div class="container container-center margin-top">
+                    <h1>Good books recommendation app</h1>
+                    <small>August, 2022</small>
+                    <p>A book recommendation based on genre app built with <strong>React</strong>. You can know the best books in particular genre.</p>
+
+                    <a class="link link-primary" href="https://get-book-recommendations.netlify.app">Live
+                        Project</a>
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-nine">View
+                        Source</a>
+                </div>
+            </article>
+        </li>
+
+        <li class="text-center">
+            <article class="section ow text-center">
+                <div class="container container-center margin-top">
+                    <h1>Know Your Emoji</h1>
+                    <small>August, 2022</small>
+                    <p>A emoji interpreter built with <strong>React</strong>. You can know the meaning of emoji's in our database.</p>
+
+                    <a class="link link-primary" href="https://emojis-decipherer.netlify.app">Live
+                        Project</a>
+                    <a class="link link-secondary" href="https://github.com/HarishFullStack/neog-mark-eight">View
+                        Source</a>
+                </div>
+            </article>
+        </li>
+
+        <li class="text-center">
+            <article class="section ow text-center">
+                <div class="container container-center margin-top">
                     <h1>GOT - Dothraki Traslation</h1>
-                    <small>August, 2020</small>
+                    <small>August, 2022</small>
                     <p>A translation app built with <strong>Vanilla JS</strong>. You can translate from English to Dothraki language.</p>
 
                     <a class="link link-primary" href="https://got-dothrakitranslation.netlify.app/">Live
@@ -49,7 +154,7 @@
             <article class="section ow text-center">
                 <div class="container container-center margin-top">
                     <h1>KAUN BANEGA SCOREPATI</h1>
-                    <small>August, 2020</small>
+                    <small>August, 2022</small>
                     <p>A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and find out who
                         really
                         knows you</p>
@@ -67,7 +172,7 @@
                 <div class="container container-center margin-top">
 
                     <h1>how well do you know me?</h1>
-                    <small>August, 2020</small>
+                    <small>August, 2022</small>
                     <p>A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and find out who
                         really
                         knows you</p>
